--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=URL
 # Banco H2 persistente
 spring.profiles.active=dev
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
