--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=URL
 spring.profiles.active=dev
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
+spring.datasource.password=
