--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=dev
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Dialeto do Hibernate para H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
