--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 
 # Dialeto do Hibernate para H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
